--- a/JS/09.30/09_30.html
+++ b/JS/09.30/09_30.html
@@ -3,12 +3,11 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=divice-width, initial-scale=1.0" />
-		<title>09.29</title>
+		<title>09.30</title>
 	</head>
 	<link rel="stylesheet" href="style.css" />
-	<body>
-		<h1 id="title">Time Until Christmas Eve</h1>
-		<h1 id="clock">00d 00h 00m 00s</h1>
-		<script src="09_29.js"></script>
+	<body id="body">
+		<button>Give me color</button>
+		<script src="09_30.js"></script>
 	</body>
 </html>
