--- a/CSS/10.01/auto-fit/index.html
+++ b/CSS/10.01/auto-fit/index.html
@@ -26,6 +26,7 @@
 			<div class="item">3</div>
 			<div class="item">4</div>
 			<div class="item">5</div>
+			<div class="item">6</div>
 		</div>
 
 		<div class="gird">
