--- a/JS/10.11/10_11.html
+++ b/JS/10.11/10_11.html
@@ -6,8 +6,11 @@
 		<title>09.30</title>
 	</head>
 	<link rel="stylesheet" href="style.css" />
-	<body id="body">
-		<button>Give me color</button>
+	<body>
+		<form id="todo-form">
+			<input type="text" placeholder="Write a To Do and Press Enter" required />
+		</form>
+		<ul id="todo-list"></ul>
 		<script src="10_11.js"></script>
 	</body>
 </html>
