grid layout 대략적인 구도 잡고, text 넣음.

--- a/CSS/10.12/10_12.html
+++ b/CSS/10.12/10_12.html
@@ -9,13 +9,31 @@
 	</head>
 	<body>
 		<div class="grid">
-			<div class="header">Ostrich</div>
-			<div class="content">Ostrich</div>
-			<div class="nav">Ostrich</div>
-			<div class="footer1">Ostrich</div>
-			<div class="footer2">Ostrich</div>
-			<div class="footer3">Ostrich</div>
-			<div class="footer4">Ostrich</div>
+			<div>
+				CHANGES <br />
+				CHANGES <br />
+				CHANGES <br />
+				CHANGES <br />
+				JULY 4-5 <br />
+				<br />
+			</div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div>
+				ABOUT <br />
+				CONTACT <br />
+				VENUES <br />
+				FAQ <br />
+				PARTNERS <br />
+			</div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div>TICKETS</div>
+			<div></div>
+			<div></div>
 		</div>
 	</body>
 </html>
