html 구조 변경, css grid layout 구조 변경

--- a/CSS/10.12/10_12.html
+++ b/CSS/10.12/10_12.html
@@ -10,30 +10,82 @@
 	<body>
 		<div class="grid">
 			<div>
-				CHANGES <br />
-				CHANGES <br />
-				CHANGES <br />
-				CHANGES <br />
-				JULY 4-5 <br />
-				<br />
+				<div class="item1">CHANGES</div>
+				<div class="item1">CHANGES</div>
+				<div class="item1">CHANGES</div>
+				<div class="item1">CHANGES</div>
+				<div class="item1">JULY 4-5</div>
 			</div>
-			<div></div>
-			<div></div>
-			<div></div>
 			<div>
-				ABOUT <br />
-				CONTACT <br />
-				VENUES <br />
-				FAQ <br />
-				PARTNERS <br />
+				<div>ABOUT</div>
+				<div>CONTACT</div>
+				<div>VENUES</div>
+				<div>FAQ</div>
+				<div>PARTNERS</div>
 			</div>
-			<div></div>
-			<div></div>
 			<div></div>
 			<div></div>
 			<div>TICKETS</div>
-			<div></div>
-			<div></div>
+			<div>
+				<div id="speakers">SPEAKERS</div>
+				<div>HITS</div>
+				<div>ACTIVITIES OF DAILY</div>
+				<div>LIVING</div>
+				<div>ALLEGRA CALDWELL</div>
+				<div>BEATRICE</div>
+				<div>BILL WILSON [US]</div>
+				<div>BRIGID DIXON</div>
+				<div>CARLY JAMES [US]</div>
+				<div>CHERIE HU [US]</div>
+				<div>CHRIS MYLRAE</div>
+				<div>CHRISTIE MORGAN</div>
+				<div>CHRISTOPHER</div>
+				<div>MURATORE [US]</div>
+				<div>DANIELLE LEVY [US]</div>
+				<div>DAVE "DIZZ1" NORRIS</div>
+				<div>DAVID BENGE [NZ]</div>
+				<div>DAVID RAY</div>
+				<div>GARETH SMITH</div>
+				<div>JENN PELLY [US]</div>
+				<div>JOSEPH EDWARD</div>
+				<div>KEYES [US]</div>
+				<div>KAT DOPPER</div>
+				<div>KATE DUNCAN</div>
+				<div>LORRAE MCKENNA</div>
+				<div>MARIHUZKA</div>
+				<div>CORNELIUS</div>
+				<div>MARKELL CASEY [US]</div>
+			</div>
+			<div>
+				<div id="artists">ARTISTS</div>
+				<div>808S AND GREATEST</div>
+				<div>HITS</div>
+				<div>ACTIVITIES OF DAILY</div>
+				<div>LIVING</div>
+				<div>ALEXANDER BIGGS</div>
+				<div>ALICE SKYE</div>
+				<div>AUSMUTEANTS</div>
+				<div>BABY</div>
+				<div>BENCH PRESS</div>
+				<div>BIRDZ</div>
+				<div>BONES AND JONES</div>
+				<div>CABLE TIES</div>
+				<div>CHAPEL</div>
+				<div>CIVIC</div>
+				<div>CLEOPOLD</div>
+				<div>DARCY BAYLIS</div>
+				<div>DARK FAIR</div>
+				<div>DIANAS</div>
+				<div>DIET</div>
+				<div>DRMNGNOW</div>
+				<div>EAST BRUNSWICK ALL</div>
+				<div>GIRLS CHOIR</div>
+				<div>EILISH GILLIGAN</div>
+				<div>ELIZABETH</div>
+				<div>EVAN KLAR</div>
+				<div>EVELYN IDA MORRIS</div>
+				<div>FRASER A. GORMAN</div>
+			</div>
 		</div>
 	</body>
 </html>
