--- a/CSS/10.12/10_12.html
+++ b/CSS/10.12/10_12.html
@@ -11,10 +11,10 @@
 		<div class="grid">
 			<div>
 				<div class="item1">CHANGES</div>
+				<div>CHANGES</div>
 				<div class="item1">CHANGES</div>
-				<div class="item1">CHANGES</div>
-				<div class="item1">CHANGES</div>
-				<div class="item1">JULY 4-5</div>
+				<div>CHANGES</div>
+				<div>JULY 4-5</div>
 			</div>
 			<div>
 				<div>ABOUT</div>
@@ -33,7 +33,7 @@
 				<div>LIVING</div>
 				<div>ALLEGRA CALDWELL</div>
 				<div>BEATRICE</div>
-				<div>BILL WILSON [US]</div>
+				<span id="highlight">BILL WILSON [US]</span>
 				<div>BRIGID DIXON</div>
 				<div>CARLY JAMES [US]</div>
 				<div>CHERIE HU [US]</div>
