--- a/CSS/10.13/10_13.html
+++ b/CSS/10.13/10_13.html
@@ -11,22 +11,26 @@
 		<div class="grid">
 			<div>
 				CURRY CAFE! CURRY CAFE! FLEMINGTON & NORTHCOTE! NUMBER ONE BEST QUALITY!
-				VEG & NON.VEG! CURRY CAFE! CURRY CAFE!
+				VEG & NON.VEG! CURRY CAFE! CURRY CAFE! CURRY CAFE! CURRY CAFE!
+				FLEMINGTON & NORTHCOTE! NUMBER ONE BEST QUALITY! VEG & NON.VEG! CURRY
+				CAFE! CURRY CAFE!
 			</div>
 			<div class="orange">LOCATIONS + MENU + SHOP</div>
 			<!-- <div class="center">
 				<div></div>
 				<div></div>
 			</div> -->
-			<div>img1</div>
-			<div>img2</div>
+			<div></div>
+			<div></div>
+			<div>CURRY CAFE</div>
 			<div class="green">🔅 ORDER T|A 🔅</div>
 			<div class="icons">SPICY NEWSLETTER 🍾</div>
-
 			<div class="green">+ RESERVATIONS +</div>
 			<div class="bottom">
 				BEST QUALITY! STAY SPICY - NUMBER ONE BEST QUALITY! EVERY DAY OPEN!
-				FLEMINGTON & NORTHCOTE! HOME DELIVERY ~
+				FLEMINGTON & NORTHCOTE! HOME DELIVERY ~ BEST QUALITY! STAY SPICY -
+				NUMBER ONE BEST QUALITY! EVERY DAY OPEN! FLEMINGTON & NORTHCOTE! HOME
+				DELIVERY ~
 			</div>
 		</div>
 	</body>
