--- a/JS/10.13/10_13.html
+++ b/JS/10.13/10_13.html
@@ -5,12 +5,8 @@
 		<meta name="viewport" content="width=divice-width, initial-scale=1.0" />
 		<title>10.13</title>
 	</head>
-	<link rel="stylesheet" href="style.css" />
+	<!-- <link rel="stylesheet" href="style.css" /> -->
 	<body>
-		<form id="todo-form">
-			<input type="text" placeholder="Write a To Do and Press Enter" required />
-		</form>
-		<ul id="todo-list"></ul>
 		<script src="10_13.js"></script>
 	</body>
 </html>
