weather open API를 이용해서 날씨 정보를 갖고옴, fetch와 비동기를 사용하여, 화면단에 나타냄

--- a/JS/10.13/10_13.html
+++ b/JS/10.13/10_13.html
@@ -7,6 +7,10 @@
 	</head>
 	<!-- <link rel="stylesheet" href="style.css" /> -->
 	<body>
+		<div id="weather">
+			<span></span>
+			<span></span>
+		</div>
 		<script src="10_13.js"></script>
 	</body>
 </html>
