text와 pic사이 간격들 조정

--- a/CSS/10.14/10_14.html
+++ b/CSS/10.14/10_14.html
@@ -27,15 +27,105 @@
 		</div>
 
 		<div class="box">
-			<div class="info"></div>
-			<div class="info"></div>
-			<div class="info"></div>
-			<div class="info"></div>
-			<div class="info"></div>
-			<div class="info"></div>
-			<div class="info"></div>
-			<div class="info"></div>
-			<div class="info"></div>
+			<div class="info">
+				<div class="space">
+					<span>Kate Bedford</span>
+					<span>PGDIPFA</span>
+				</div>
+				<div id="pic"></div>
+				<div class="space">
+					<span>2016</span>
+					<span>Read more</span>
+				</div>
+			</div>
+			<div class="info">
+				<div class="space">
+					<span>Patricia Ramos</span>
+					<span>BFA(HONS)</span>
+				</div>
+				<div id="pic"></div>
+				<div class="space">
+					<span>2016</span>
+					<span>Read more</span>
+				</div>
+			</div>
+			<div class="info">
+				<div class="space">
+					<span>Trevor Newman</span>
+					<span>MFA</span>
+				</div>
+				<div id="pic"></div>
+				<div class="space">
+					<span>2016</span>
+					<span>Read more</span>
+				</div>
+			</div>
+			<div class="info">
+				<div class="space">
+					<span>Kristina Leggett</span>
+					<span>BFA(HONS)</span>
+				</div>
+				<div id="pic"></div>
+				<div class="space">
+					<span>2016</span>
+					<span>Read more</span>
+				</div>
+			</div>
+			<div class="info">
+				<div class="space">
+					<span>JoAnne Raill</span>
+					<span>PGDIPFA</span>
+				</div>
+				<div id="pic"></div>
+				<div class="space">
+					<span>2016</span>
+					<span>Read more</span>
+				</div>
+			</div>
+			<div class="info">
+				<div class="space">
+					<span>Emma Chalmers</span>
+					<span>MFA</span>
+				</div>
+				<div id="pic"></div>
+				<div class="space">
+					<span>2016</span>
+					<span>Read more</span>
+				</div>
+			</div>
+			<div class="info">
+				<div class="space">
+					<span>Wendelien Bakker</span>
+					<span>MFA</span>
+				</div>
+				<div id="pic"></div>
+				<div class="space">
+					<span>2016</span>
+					<span>Read more</span>
+				</div>
+			</div>
+			<div class="info">
+				<div class="space">
+					<span>Mariadelle Gamit</span>
+					<span>BFA(HONS)</span>
+				</div>
+				<div id="pic"></div>
+				<div class="space">
+					<span>2016</span>
+					<span>Read more</span>
+				</div>
+			</div>
+			<div class="info">
+				<div class="space">
+					<span>Tullia Pye</span>
+					<span>BFA</span>
+				</div>
+				<div id="pic"></div>
+				<div class="space">
+					<span>2016</span>
+					<span>Read more</span>
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
