--- a/CSS/10.14/10_14.html
+++ b/CSS/10.14/10_14.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="10_14.css" />
 	</head>
 	<body>
-		<div class="grid">
+		<div class="nav">
 			<select name="form" id="select">
 				<option>Year: All</option>
 			</select>
@@ -32,10 +32,10 @@
 					<span>Kate Bedford</span>
 					<span>PGDIPFA</span>
 				</div>
-				<div id="pic"></div>
+				<div class="pic1"></div>
 				<div class="space">
 					<span>2016</span>
-					<span>Read more</span>
+					<a href="">Read more</a>
 				</div>
 			</div>
 			<div class="info">
@@ -43,10 +43,10 @@
 					<span>Patricia Ramos</span>
 					<span>BFA(HONS)</span>
 				</div>
-				<div id="pic"></div>
+				<div class="pic2"></div>
 				<div class="space">
 					<span>2016</span>
-					<span>Read more</span>
+					<a href="">Read more</a>
 				</div>
 			</div>
 			<div class="info">
@@ -54,10 +54,10 @@
 					<span>Trevor Newman</span>
 					<span>MFA</span>
 				</div>
-				<div id="pic"></div>
+				<div class="pic3"></div>
 				<div class="space">
 					<span>2016</span>
-					<span>Read more</span>
+					<a href="">Read more</a>
 				</div>
 			</div>
 			<div class="info">
@@ -65,10 +65,10 @@
 					<span>Kristina Leggett</span>
 					<span>BFA(HONS)</span>
 				</div>
-				<div id="pic"></div>
+				<div class="pic4"></div>
 				<div class="space">
 					<span>2016</span>
-					<span>Read more</span>
+					<a href="">Read more</a>
 				</div>
 			</div>
 			<div class="info">
@@ -76,10 +76,10 @@
 					<span>JoAnne Raill</span>
 					<span>PGDIPFA</span>
 				</div>
-				<div id="pic"></div>
+				<div class="pic5"></div>
 				<div class="space">
 					<span>2016</span>
-					<span>Read more</span>
+					<a href="">Read more</a>
 				</div>
 			</div>
 			<div class="info">
@@ -87,10 +87,10 @@
 					<span>Emma Chalmers</span>
 					<span>MFA</span>
 				</div>
-				<div id="pic"></div>
+				<div class="pic6"></div>
 				<div class="space">
 					<span>2016</span>
-					<span>Read more</span>
+					<a href="">Read more</a>
 				</div>
 			</div>
 			<div class="info">
@@ -98,10 +98,10 @@
 					<span>Wendelien Bakker</span>
 					<span>MFA</span>
 				</div>
-				<div id="pic"></div>
+				<div class="pic7"></div>
 				<div class="space">
 					<span>2016</span>
-					<span>Read more</span>
+					<a href="">Read more</a>
 				</div>
 			</div>
 			<div class="info">
@@ -109,10 +109,10 @@
 					<span>Mariadelle Gamit</span>
 					<span>BFA(HONS)</span>
 				</div>
-				<div id="pic"></div>
+				<div class="pic8"></div>
 				<div class="space">
 					<span>2016</span>
-					<span>Read more</span>
+					<a href="">Read more</a>
 				</div>
 			</div>
 			<div class="info">
@@ -120,10 +120,10 @@
 					<span>Tullia Pye</span>
 					<span>BFA</span>
 				</div>
-				<div id="pic"></div>
+				<div class="pic9"></div>
 				<div class="space">
 					<span>2016</span>
-					<span>Read more</span>
+					<a href="">Read more</a>
 				</div>
 			</div>
 		</div>
