--- a/CSS/10.15/10_15.html
+++ b/CSS/10.15/10_15.html
@@ -21,7 +21,7 @@
 			<button>TEAM</button>
 			<button>ADVICE</button>
 			<button>CONTACT</button>
-			<div>
+			<div class="footer">
 				<div>
 					1300 726 566 <br />
 					sales@a1office.com.au
@@ -39,34 +39,32 @@
 				<div>EN | 中</div>
 			</div>
 		</div>
-		<div class="home">
-			<div>HOME</div>
-			<h1>
-				Think <br />
-				Inside the <br />
-				Square.
-			</h1>
+		<div class="grid">
 			<div>
-				At A1 office, we design, construct, project <br />
-				manage, and maintain office spaces across a <br />
-				diverse range of industries. <br />
-				<br />
-				We bring 25years'experience in the industry <br />
-				to help you with every aspect of the office fit <br />
-				out - from design through to construction, and <br />
-				everything beyond.
+				<div>HOME</div>
+				<h1>
+					Think <br />
+					Inside the <br />
+					Square.
+				</h1>
+				<div>
+					At A1 office, we design, construct, project <br />
+					manage, and maintain office spaces across a <br />
+					diverse range of industries. <br />
+					<br />
+					We bring 25years'experience in the industry <br />
+					to help you with every aspect of the office fit <br />
+					out - from design through to construction, and <br />
+					everything beyond.
+				</div>
 			</div>
 			<div></div>
-			<div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-			</div>
-		</div>
-		<div class="services">
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
 			<div>
 				<div>SERVICES</div>
 				<h2>
